# dexa

./: .gitignore  README.md
desktop-hand/: CLAUDE.md  Cargo.toml  README.md
desktop-hand/src/: behavior.rs  cli.rs  executor.rs  human.rs  main.rs  mcp.rs  service.rs  smooth.rs
skills/wechat-agent/: SKILL.md
vision-brain/: CLAUDE.md  Cargo.toml  README.md
vision-brain/src/: apps.rs  capture.rs  cli.rs  main.rs  mcp.rs  memory.rs  service.rs  vision.rs
wechat-agent/: CLAUDE.md  Cargo.toml  README.md  TESTING.md  config.toml
wechat-agent/crates/wx-agent/: Cargo.toml
wechat-agent/crates/wx-agent/src/: cmd_distill.rs  cmd_send.rs  cmd_watch.rs  config.rs  main.rs  wechat_ui.rs
wechat-agent/crates/wx-core/: Cargo.toml
wechat-agent/crates/wx-core/src/: db.rs  hand_client.rs  lib.rs  llm.rs  models.rs  wx_client.rs
wechat-agent/crates/wx-distill/: Cargo.toml
wechat-agent/crates/wx-distill/src/: contact.rs  lib.rs  self_distill.rs
wechat-agent/skills/: README.md  install.sh
wechat-agent/skills/wx-distill/: SKILL.md
wechat-agent/skills/wx-history/: SKILL.md
wechat-agent/skills/wx-reply/: SKILL.md
wechat-agent/skills/wx-self/: SKILL.md
wechat-agent/skills/wx-send/: SKILL.md
wechat-agent/skills/wx-watch/: SKILL.md
