[package]
name = "desktop-hand"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hand"
path = "src/main.rs"

[dependencies]
enigo = "0.2"
arboard = "3"
rmcp = { version = "1", features = ["server", "transport-io", "schemars"] }
clap = { version = "4", features = ["derive"] }
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
