[workspace]
members = ["crates/wx-core", "crates/wx-distill", "crates/wx-agent"]
resolver = "2"

[workspace.dependencies]
tokio       = { version = "1",   features = ["full"] }
serde       = { version = "1",   features = ["derive"] }
serde_json  = "1"
anyhow      = "1"
thiserror   = "2"
chrono      = { version = "0.4", features = ["serde"] }
reqwest     = { version = "0.12", features = ["json"] }
sqlx        = { version = "0.8",  features = ["sqlite", "runtime-tokio-rustls", "macros"] }
clap        = { version = "4",   features = ["derive"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml        = "0.8"
dirs        = "5"
