[package]
name    = "wx-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wx-agent"
path = "src/main.rs"

[dependencies]
wx-core    = { path = "../wx-core" }
wx-distill = { path = "../wx-distill" }
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
chrono     = { workspace = true }
clap       = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
toml       = { workspace = true }
dirs       = { workspace = true }
