[package]
name    = "wx-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
chrono     = { workspace = true }
reqwest    = { workspace = true }
sqlx       = { workspace = true }
dirs       = { workspace = true }
